fix mobile padding on image & content set on mobile

--- a/wp-content/themes/koelsch/assets/css/frontend.css
+++ b/wp-content/themes/koelsch/assets/css/frontend.css
@@ -1985,6 +1985,8 @@ a {
 
 .content-section-double {
   position: relative; }
+  .content-section-double .content-section-double.ic-set {
+    margin: 30px -30px 0; }
   .content-section-double.ic-set .text-box .divider {
     position: relative;
     z-index: 10;
