--- a/wp-content/themes/koelsch/develop/scss/components/_content-blocks.scss
+++ b/wp-content/themes/koelsch/develop/scss/components/_content-blocks.scss
@@ -711,6 +711,15 @@ $break-margin: calc((100vw - 1200px)/2 * -1);
 	// @include media ('>=widescreen') {
 	// 	margin-bottom: 250px;
 	// }
+
+	.content-section-double{
+
+		&.ic-set{
+			margin:30px -30px 0;
+		}
+
+	}
+
 	&.ic-set{
 
 		.text-box{
